--- a/style.css
+++ b/style.css
@@ -41,36 +41,15 @@ body {
   margin: 24px 0;
   margin-top: 0;
   opacity: 0;
-  -webkit-animation: slidedown 0.6s ease forwards;
-          animation: slidedown 0.6s ease forwards;
+  animation: slidedown 0.6s ease forwards;
 }
 #es-loreal.es-loreal .es-kv__banner {
   position: relative;
   background: url("images/bg-kv.png") no-repeat center;
   background-size: cover;
-  min-height: 533px;
+  min-height: 426px;
   padding-top: 20px;
   overflow: hidden;
-}
-#es-loreal.es-loreal .es-kv__stars {
-  display: none;
-  visibility: hidden;
-  position: absolute;
-  top: 50px;
-  left: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#es-loreal.es-loreal .es-kv__stars p {
-  text-transform: uppercase;
-  font-weight: 800;
-  margin: 0;
-}
-#es-loreal.es-loreal .es-kv__stars span {
-  font-size: 20px;
-  font-weight: 800;
 }
 #es-loreal.es-loreal .es-kv__brand {
   width: 100%;
@@ -79,22 +58,24 @@ body {
   align-items: center;
 }
 #es-loreal.es-loreal .es-kv__brand-name {
-  max-width: 200px;
+  max-width: 300px;
   margin-bottom: 20px;
 }
 #es-loreal.es-loreal .es-kv__fancy {
+  align-self: flex-start;
   margin: 0;
   padding: 0;
   line-height: inherit;
   color: inherit;
   font-family: inherit;
   font-weight: inherit;
-  font-size: 20px;
-  text-align: center;
+  margin-bottom: 5px;
+  margin: 5px;
+  max-width: 200px;
+  font-size: 12px;
   font-weight: 600;
-}
-#es-loreal.es-loreal .es-kv__badge {
-  margin-bottom: 24px;
+  color: #fff;
+  text-transform: uppercase;
 }
 #es-loreal.es-loreal .es-kv__title {
   margin: 0;
@@ -109,6 +90,13 @@ body {
   text-align: center;
   margin-bottom: 8px;
 }
+#es-loreal.es-loreal .es-kv__title-group {
+  display: flex;
+  gap: 10px;
+}
+#es-loreal.es-loreal .es-kv__title-1, #es-loreal.es-loreal .es-kv__title-2 {
+  width: 100px;
+}
 #es-loreal.es-loreal .es-kv__text {
   margin: 0;
   padding: 0;
@@ -120,17 +108,18 @@ body {
   text-align: center;
 }
 #es-loreal.es-loreal .es-kv__packshot {
+  position: absolute;
   opacity: 0;
-  -webkit-animation: appear 0.6s ease forwards;
-          animation: appear 0.6s ease forwards;
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-  position: relative;
+  animation: appear 0.6s ease forwards;
+  animation-delay: 0.6s;
+  bottom: 0;
+  right: 0;
   padding: 0 16px;
 }
 #es-loreal.es-loreal .es-kv__packshot img {
   max-width: 240px;
-  margin: 0 auto;
+  height: 230px;
+  margin-right: 0;
 }
 #es-loreal.es-loreal .es-kv__img {
   max-width: 100%;
@@ -152,25 +141,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 #es-loreal.es-loreal .es-kv__content--1 {
-  -webkit-animation: slideright 0.6s ease forwards;
-          animation: slideright 0.6s ease forwards;
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-}
-#es-loreal.es-loreal .es-kv__content--2 {
-  -webkit-animation: slideleft 0.6s ease forwards;
-          animation: slideleft 0.6s ease forwards;
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-}
-#es-loreal.es-loreal .es-kv__content p {
-  margin-bottom: 20px;
-}
-#es-loreal.es-loreal .es-kv__content img {
-  display: none;
+  position: absolute;
+  bottom: 0;
+  animation: slideright 0.6s ease forwards;
+  animation-delay: 0.6s;
 }
 #es-loreal.es-loreal .es-kv__disc {
   margin: 0;
@@ -221,9 +197,6 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 48px 0;
-}
-#es-loreal.es-loreal .es-benefits__single {
-  width: 280px;
 }
 #es-loreal.es-loreal .es-benefits__single:hover .es-benefits__img--bg {
   transform: scale(1.1);
@@ -327,7 +300,7 @@ body {
   display: none;
 }
 #es-loreal.es-loreal .es-benefits__brand img {
-  max-width: 360px;
+  max-width: 260px;
 }
 #es-loreal.es-loreal .es-you {
   padding: 56px 16px 32px 16px;
@@ -358,7 +331,18 @@ body {
   color: inherit;
   font-family: inherit;
   font-weight: inherit;
+  max-width: 480px;
   font-size: 18px;
+}
+#es-loreal.es-loreal .es-you__image {
+  position: relative;
+}
+#es-loreal.es-loreal .es-you__image::after {
+  display: none;
+  content: url(images/line-7.png);
+  position: absolute;
+  top: 175px;
+  right: -60px;
 }
 #es-loreal.es-loreal .es-you__img {
   max-width: 100%;
@@ -421,9 +405,10 @@ body {
   background-repeat: no-repeat;
   margin-bottom: 5px;
   position: relative;
-  color: #fff;
+  color: #000;
 }
 #es-loreal.es-loreal .es-results__before p {
+  margin: 0;
   font-size: 14px;
   font-weight: bolder;
   position: absolute;
@@ -438,19 +423,101 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
-  color: #fff;
+  color: #000;
 }
 #es-loreal.es-loreal .es-results__after p {
+  margin: 0;
   font-size: 14px;
   font-weight: bolder;
   position: absolute;
   bottom: 0;
   right: 10px;
 }
+#es-loreal.es-loreal .es-results-2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 42px;
+  padding-bottom: 42px;
+  justify-content: center;
+  align-items: center;
+}
+#es-loreal.es-loreal .es-results-2__content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#es-loreal.es-loreal .es-results-2__title {
+  text-transform: uppercase;
+  text-align: center;
+}
+#es-loreal.es-loreal .es-results-2__images {
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+  justify-content: center;
+}
+#es-loreal.es-loreal .es-results-2__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-width: 250px;
+  min-height: 250px;
+}
+#es-loreal.es-loreal .es-results-2__before {
+  width: 100%;
+  height: 100%;
+  background-image: url(/images/before-2.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-bottom: 5px;
+  position: relative;
+  color: #000;
+}
+#es-loreal.es-loreal .es-results-2__before p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: bolder;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+}
+#es-loreal.es-loreal .es-results-2__after {
+  width: 100%;
+  height: 100%;
+  background-image: url(/images/after-2.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  color: #000;
+}
+#es-loreal.es-loreal .es-results-2__after p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: bolder;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+}
+#es-loreal.es-loreal .es-results-2__text {
+  align-self: flex-start;
+}
+#es-loreal.es-loreal .es-results-2__text p {
+  text-transform: uppercase;
+}
 #es-loreal.es-loreal .es-look {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 32px;
 }
 #es-loreal.es-loreal .es-look__photo {
   margin-bottom: 32px;
@@ -525,68 +592,7 @@ body {
 #es-loreal.es-loreal .es-look__link:hover {
   background: #e1044b;
 }
-#es-loreal.es-loreal .es-eyelashes__title {
-  text-align: center;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 32px;
-}
-#es-loreal.es-loreal .es-eyelashes__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 32px;
-}
-#es-loreal.es-loreal .es-eyelashes__single {
-  display: flex;
-  flex-direction: column;
-  max-width: 200px;
-  margin-top: 15px;
-  margin-right: 0;
-  position: relative;
-}
-#es-loreal.es-loreal .es-eyelashes__img {
-  width: 100%;
-  height: auto;
-  position: relative;
-}
-#es-loreal.es-loreal .es-eyelashes__text {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-#es-loreal.es-loreal .es-eyelashes__before {
-  display: flex;
-  position: absolute;
-  color: #fff;
-  font-weight: bolder;
-  top: 180px;
-  left: 10px;
-}
-#es-loreal.es-loreal .es-eyelashes__after {
-  display: flex;
-  position: absolute;
-  color: #fff;
-  font-weight: bolder;
-  bottom: -5px;
-  left: 10px;
-}
-#es-loreal.es-loreal .es-eyelashes__vertical-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 350px;
-}
-#es-loreal.es-loreal .es-eyelashes__vertical {
-  text-transform: uppercase;
-  font-size: 24px;
-  transform: rotate(-90deg);
-  display: none;
-}
 #es-loreal.es-loreal .es-slider {
-  margin-bottom: 64px;
   padding: 56px 16px 32px 16px;
 }
 #es-loreal.es-loreal .es-slider__title {
@@ -613,7 +619,7 @@ body {
   padding: 56px 16px 0 16px;
 }
 #es-loreal.es-loreal .es-slider__content {
-  max-width: 886px;
+  max-width: 786px;
   padding: 16px 24px;
   margin: 0 auto;
   background: #fff;
@@ -656,7 +662,7 @@ body {
   font-family: inherit;
   font-weight: inherit;
   font-size: 12px;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
   text-align: center;
   line-height: 1.5;
 }
@@ -667,8 +673,11 @@ body {
   color: inherit;
   font-family: inherit;
   font-weight: inherit;
-  font-size: 18px;
-  font-weight: 800;
+  font-size: 14px;
+  font-weight: 700;
+}
+#es-loreal.es-loreal .es-slider__text {
+  font-size: 13px;
 }
 #es-loreal.es-loreal .es-slider__link {
   margin: 0;
@@ -745,7 +754,7 @@ body {
 }
 #es-loreal.es-loreal .es-routine {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
   padding: 32px;
 }
 #es-loreal.es-loreal .es-routine__img {
@@ -755,7 +764,9 @@ body {
   height: 100%;
 }
 #es-loreal.es-loreal .es-routine__img img {
-  width: 100%;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
 }
 #es-loreal.es-loreal .es-routine__img--packshots {
   margin-left: 0;
@@ -771,6 +782,9 @@ body {
 #es-loreal.es-loreal .es-routine__title {
   font-size: 28px;
   text-transform: uppercase;
+  text-align: center;
+}
+#es-loreal.es-loreal .es-routine__disclaimer {
   text-align: center;
 }
 @media screen and (min-width: 768px) {
@@ -822,7 +836,6 @@ body {
   #es-loreal.es-loreal .es-kv__line-2 {
     position: absolute;
     left: -85px;
-    width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
   }
@@ -833,7 +846,6 @@ body {
     position: absolute;
     left: -50px;
     top: 215px;
-    width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
   }
@@ -887,6 +899,9 @@ body {
   #es-loreal.es-loreal .es-you__asset::before {
     display: block;
   }
+  #es-loreal.es-loreal .es-you__image::after {
+    display: block;
+  }
   #es-loreal.es-loreal .es-results {
     display: flex;
     flex-direction: row;
@@ -899,18 +914,6 @@ body {
   }
   #es-loreal.es-loreal .es-results__before {
     margin: 5px;
-  }
-  #es-loreal.es-loreal .es-eyelashes__single {
-    margin-right: 5px;
-  }
-  #es-loreal.es-loreal .es-eyelashes__vertical {
-    display: block;
-  }
-  #es-loreal.es-loreal .es-eyelashes__before {
-    display: none;
-  }
-  #es-loreal.es-loreal .es-eyelashes__after {
-    display: none;
   }
   #es-loreal.es-loreal .es-slider {
     margin-bottom: 32px;
@@ -976,17 +979,17 @@ body {
     padding-right: 16px;
   }
   #es-loreal.es-loreal .es-slider .swiper-button-next,
-#es-loreal.es-loreal .es-slider .swiper-container-rtl .swiper-button-prev {
+  #es-loreal.es-loreal .es-slider .swiper-container-rtl .swiper-button-prev {
     right: -48px;
     left: auto;
   }
   #es-loreal.es-loreal .es-slider .swiper-button-prev,
-#es-loreal.es-loreal .es-slider .swiper-container-rtl .swiper-button-next {
+  #es-loreal.es-loreal .es-slider .swiper-container-rtl .swiper-button-next {
     left: -48px;
     right: auto;
   }
   #es-loreal.es-loreal .es-slider .swiper-button-next,
-#es-loreal.es-loreal .es-slider .swiper-button-prev {
+  #es-loreal.es-loreal .es-slider .swiper-button-prev {
     width: 40px;
   }
   #es-loreal.es-loreal .es-routine {
@@ -1019,29 +1022,9 @@ body {
   }
 }
 
-@-webkit-keyframes appear {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 @keyframes appear {
   from {
     opacity: 0;
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@-webkit-keyframes slidedown {
-  from {
-    opacity: 0;
-    transform: translateY(-32px);
   }
   to {
     opacity: 1;
@@ -1058,30 +1041,10 @@ body {
     transform: translateY(0);
   }
 }
-@-webkit-keyframes slideright {
-  from {
-    opacity: 0.3;
-    transform: translateX(-100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
 @keyframes slideright {
   from {
     opacity: 0.3;
     transform: translateX(-100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes slideleft {
-  from {
-    opacity: 0.3;
-    transform: translateX(100px);
   }
   to {
     opacity: 1;
