--- a/style.scss
+++ b/style.scss
@@ -49,11 +49,11 @@ body {
     font-family: $regular;
     color: $black;
   }
- 
+
   .es-kv {
     position: relative;
     padding-top: 24px;
-    &__disclaimer{
+    &__disclaimer {
       position: absolute;
       bottom: -30px;
       right: 10px;
@@ -69,48 +69,31 @@ body {
       position: relative;
       background: url('images/bg-kv.png') no-repeat center;
       background-size: cover;
-      min-height: 533px;
+      min-height: 426px;
       padding-top: 20px;
       overflow: hidden;
     }
-    &__stars{
-      display: none;
-      visibility: hidden;
-      position: absolute;
-      top: 50px;
-      left:50px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      p{
-        text-transform: uppercase;
-        font-weight: 800;
-        margin: 0;
-      }
-      span{
-        font-size: 20px;
-        font-weight: 800;
-      }
-    }
-    &__brand{
+
+    &__brand {
       width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    &__brand-name{
-      max-width: 200px;
+    &__brand-name {
+      max-width: 300px;
       margin-bottom: 20px;
     }
     &__fancy {
+      align-self: flex-start;
       @include text;
-      font-size: 20px;
-      text-align: center;
+      margin-bottom: 5px;
+      margin: 5px;
+      max-width: 200px;
+      font-size: 12px;
       font-weight: 600;
-    }
-    &__badge {
-      margin-bottom: 24px;
+      color: #fff;
+      text-transform: uppercase;
     }
     &__title {
       @include text;
@@ -120,26 +103,37 @@ body {
       text-align: center;
       margin-bottom: 8px;
     }
+    &__title-group {
+      display: flex;
+      gap: 10px;
+    }
+    &__title-1,
+    &__title-2 {
+      width: 100px;
+    }
     &__text {
       @include text;
       font-weight: 500;
       text-align: center;
     }
     &__packshot {
+      position: absolute;
       opacity: 0;
       animation: appear 0.6s ease forwards;
       animation-delay: 0.6s;
-      position: relative;
+      bottom: 0;
+      right: 0;
       padding: 0 16px;
-      img{
+      img {
         max-width: 240px;
-        margin: 0 auto;
+        height: 230px;
+        margin-right: 0;
       }
     }
     &__img {
       @include img;
     }
-    &__lines{
+    &__lines {
       display: none;
     }
     &__tik {
@@ -154,20 +148,12 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
+
       &--1 {
+        position: absolute;
+        bottom: 0;
         animation: slideright 0.6s ease forwards;
         animation-delay: 0.6s;
-      }
-      &--2 {
-        animation: slideleft 0.6s ease forwards;
-        animation-delay: 0.6s;
-      }
-      p{
-        margin-bottom: 20px;
-      }
-      img{
-        display: none;
       }
     }
     &__disc {
@@ -208,7 +194,7 @@ body {
       gap: 48px 0;
     }
     &__single {
-      width: 280px;
+      // width: 280px;
       &:hover {
         .es-benefits__img--bg {
           transform: scale(1.1);
@@ -276,7 +262,7 @@ body {
     }
     &__packshot {
       flex: 3;
-      img{
+      img {
         max-width: 300px;
       }
     }
@@ -291,13 +277,13 @@ body {
     &__line {
       display: none;
     }
-    &__brand{
-      img{
-        max-width: 360px;
+    &__brand {
+      img {
+        max-width: 260px;
       }
     }
   }
- 
+
   .es-you {
     padding: 56px 16px 32px 16px;
     &__container {
@@ -318,17 +304,28 @@ body {
     }
     &__text {
       @include text;
+      max-width: 480px;
       font-size: 18px;
+    }
+    &__image {
+      position: relative;
+      &::after {
+        display: none;
+        content: url(images/line-7.png);
+        position: absolute;
+        top: 175px;
+        right: -60px;
+      }
     }
     &__img {
       @include img;
     }
-    &__asset{
+    &__asset {
       font-weight: 800;
       text-transform: uppercase;
       margin-top: 40px;
       position: relative;
-      &::before{
+      &::before {
         display: none;
         content: url(images/line-7.png);
         position: absolute;
@@ -337,8 +334,7 @@ body {
     }
   }
 
-  
-  .es-results{
+  .es-results {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -346,7 +342,7 @@ body {
     padding-top: 42px;
     justify-content: center;
     align-items: center;
-    &__content{
+    &__content {
       width: 100%;
       display: flex;
       justify-content: center;
@@ -354,18 +350,18 @@ body {
       flex-direction: column;
       align-items: flex-start;
     }
-    &__title{
+    &__title {
       text-transform: uppercase;
       text-align: center;
     }
-    &__images{
+    &__images {
       // padding: 32px;
       display: flex;
       flex-wrap: wrap;
       width: 50%;
       justify-content: center;
     }
-    &__img{
+    &__img {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -373,7 +369,7 @@ body {
       min-width: 220px;
       min-height: 220px;
     }
-    &__before{
+    &__before {
       width: 100%;
       height: 100%;
       background-image: url(/images/before.png);
@@ -382,17 +378,17 @@ body {
       background-repeat: no-repeat;
       margin-bottom: 5px;
       position: relative;
-      color: #fff;
-      p{
+      color: #000;
+      p {
+        margin: 0;
         font-size: 14px;
         font-weight: bolder;
         position: absolute;
         bottom: 0;
         right: 10px;
-
       }
     }
-    &__after{
+    &__after {
       width: 100%;
       height: 100%;
       background-image: url(/images/after.png);
@@ -400,8 +396,9 @@ body {
       background-size: contain;
       background-repeat: no-repeat;
       position: relative;
-      color: #fff;
-      p{
+      color: #000;
+      p {
+        margin: 0;
         font-size: 14px;
         font-weight: bolder;
         position: absolute;
@@ -410,17 +407,99 @@ body {
       }
     }
   }
+  .es-results-2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 42px;
+    padding-bottom: 42px;
+    justify-content: center;
+    align-items: center;
+    &__content {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    &__title {
+      text-transform: uppercase;
+      text-align: center;
+    }
+    &__images {
+      // padding: 32px;
+      display: flex;
+      flex-wrap: wrap;
+      width: 50%;
+      justify-content: center;
+    }
+    &__img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      min-width: 250px;
+      min-height: 250px;
+    }
+    &__before {
+      width: 100%;
+      height: 100%;
+      background-image: url(/images/before-2.png);
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      margin-bottom: 5px;
+      position: relative;
+      color: #000;
+      p {
+        margin: 0;
+        font-size: 14px;
+        font-weight: bolder;
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+      }
+    }
+    &__after {
+      width: 100%;
+      height: 100%;
+      background-image: url(/images/after-2.png);
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      position: relative;
+      color: #000;
+      p {
+        margin: 0;
+        font-size: 14px;
+        font-weight: bolder;
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+      }
+    }
+    &__text {
+      align-self: flex-start;
+      & p {
+        text-transform: uppercase;
+      }
+    }
+  }
   .es-look {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 32px;
     &__photo {
       margin-bottom: 32px;
     }
     &__img {
       @include img;
     }
-    &__img--mobile{
+    &__img--mobile {
       max-height: 400px;
     }
     &__title {
@@ -471,70 +550,70 @@ body {
       }
     }
   }
-  .es-eyelashes{
-    &__title{
-      text-align: center;
-      font-weight: 400;
-      text-transform: uppercase;
-      font-size: 32px;
-    }
-    &__container{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      padding: 32px;
-    }
-    &__single{
-      display: flex;
-      flex-direction: column;
-      max-width: 200px;
-      margin-top:15px;
-      margin-right: 0;
-      position: relative;
-    }
-    &__img{
-      width: 100%;
-      height: auto;
-      position: relative;
-    }
-    &__text{
-      text-align: center;
-      text-transform: uppercase;
-      font-weight: 600;
-    }
-    &__before{
-      display: flex;
-      position: absolute;
-      color: #fff;
-      font-weight: bolder;
-      top:180px;
-      left:10px;
-    }
-    &__after{
-      display: flex;
-      position: absolute;
-      color: #fff;
-      font-weight: bolder;
-      bottom: -5px;
-      left: 10px;
-    }
-    &__vertical-text{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      height: 350px;
-    }
-    &__vertical{
-      text-transform: uppercase;
-      font-size: 24px;
-      transform: rotate(-90deg);
-      display: none;
-    }
-  }
+  // .es-eyelashes {
+  //   &__title {
+  //     text-align: center;
+  //     font-weight: 400;
+  //     text-transform: uppercase;
+  //     font-size: 32px;
+  //   }
+  //   &__container {
+  //     display: flex;
+  //     flex-wrap: wrap;
+  //     justify-content: center;
+  //     align-items: center;
+  //     padding: 32px;
+  //   }
+  //   &__single {
+  //     display: flex;
+  //     flex-direction: column;
+  //     max-width: 200px;
+  //     margin-top: 15px;
+  //     margin-right: 0;
+  //     position: relative;
+  //   }
+  //   &__img {
+  //     width: 100%;
+  //     height: auto;
+  //     position: relative;
+  //   }
+  //   &__text {
+  //     text-align: center;
+  //     text-transform: uppercase;
+  //     font-weight: 600;
+  //   }
+  //   &__before {
+  //     display: flex;
+  //     position: absolute;
+  //     color: #fff;
+  //     font-weight: bolder;
+  //     top: 180px;
+  //     left: 10px;
+  //   }
+  //   &__after {
+  //     display: flex;
+  //     position: absolute;
+  //     color: #fff;
+  //     font-weight: bolder;
+  //     bottom: -5px;
+  //     left: 10px;
+  //   }
+  //   &__vertical-text {
+  //     display: flex;
+  //     flex-direction: column;
+  //     justify-content: space-between;
+  //     align-items: center;
+  //     height: 350px;
+  //   }
+  //   &__vertical {
+  //     text-transform: uppercase;
+  //     font-size: 24px;
+  //     transform: rotate(-90deg);
+  //     display: none;
+  //   }
+  // }
   .es-slider {
-    margin-bottom: 64px;
+    // margin-bottom: 64px;
     padding: 56px 16px 32px 16px;
     &__title {
       @include text;
@@ -546,7 +625,7 @@ body {
       line-height: 1.1;
       text-align: center;
     }
-    &__main-title{
+    &__main-title {
       text-align: center;
       padding-bottom: 42px;
     }
@@ -555,7 +634,7 @@ body {
       padding: 56px 16px 0 16px;
     }
     &__content {
-      max-width: 886px;
+      max-width: 786px;
       padding: 16px 24px;
       margin: 0 auto;
       background: #fff;
@@ -572,7 +651,7 @@ body {
     }
     &__photo {
       margin-bottom: 16px;
-      img{
+      img {
         border-radius: 50%;
       }
     }
@@ -586,14 +665,18 @@ body {
     &__desc {
       @include text;
       font-size: 12px;
-      margin-bottom: 8px;
+      margin-bottom: 20px;
       text-align: center;
       line-height: 1.5;
     }
     &__subtitle {
       @include text;
-      font-size: 18px;
-      font-weight: 800;
+      font-size: 14px;
+      font-weight: 700;
+    }
+    &__text {
+      // width: 600px;
+      font-size: 13px;
     }
     &__link {
       @include text;
@@ -664,49 +747,53 @@ body {
       background: $black;
     }
   }
-  .es-routine{
+  .es-routine {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
     padding: 32px;
-    &__img{
+    &__img {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
-      img{
-        width: 100%;
+      img {
+        @include img;
       }
-      &--packshots{
+      &--packshots {
         margin-left: 0;
         margin-bottom: 0;
       }
     }
-    &__content{
+    &__content {
       min-width: auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
-    &__title{
-     font-size: 28px;
-     text-transform: uppercase;
-     text-align: center;
-   }
+    &__title {
+      font-size: 28px;
+      text-transform: uppercase;
+      text-align: center;
+    }
+    &__disclaimer {
+      // display: inline-block;
+      text-align: center;
+      // margin: 0 auto;
+    }
   }
-
 
   @media screen and (min-width: 768px) {
     .es-kv {
-      &__stars{
+      &__stars {
         display: flex;
         visibility: visible;
       }
-      &__disclaimer{
+      &__disclaimer {
         position: absolute;
-      bottom: 0;
-      right: 10px;
-      font-size: 12px;
+        bottom: 0;
+        right: 10px;
+        font-size: 12px;
       }
       &__banner {
         position: relative;
@@ -723,12 +810,12 @@ body {
           top: 144px;
           left: 68%;
         }
-        img{
+        img {
           display: block;
         }
       }
-      &__packshot{
-        img{
+      &__packshot {
+        img {
           max-width: 300px;
           margin-left: 290px;
         }
@@ -736,7 +823,7 @@ body {
       &__fancy {
         margin-bottom: 10px;
       }
-      &__lines{
+      &__lines {
         display: block;
       }
       &__line {
@@ -753,10 +840,10 @@ body {
           margin-left: 48px;
         }
       }
-      &__line-3{
+      &__line-3 {
         position: absolute;
         left: -50px;
-        top:215px;
+        top: 215px;
         width: fit-content;
       }
       &__badge {
@@ -802,47 +889,51 @@ body {
       }
       &__text {
         letter-spacing: -1px;
-      
       }
       &__container {
         display: flex;
         justify-content: space-between;
         gap: 16px;
       }
-      &__asset{
-        &::before{
+      &__asset {
+        &::before {
+          display: block;
+        }
+      }
+      &__image {
+        &::after {
           display: block;
         }
       }
     }
- 
-    .es-results{
+
+    .es-results {
       display: flex;
       flex-direction: row;
-      &__content{
+      &__content {
         width: 50%;
       }
-      &__img{
+      &__img {
         width: 50%;
       }
-      &__before{
+      &__before {
         margin: 5px;
       }
     }
-    .es-eyelashes{
-      &__single{
-        margin-right: 5px;
-      }
-      &__vertical{
-        display: block;
-      }
-      &__before{
-        display:none;
-      }
-      &__after{
-        display: none;
-      }
-    }
+    // .es-eyelashes {
+    //   &__single {
+    //     margin-right: 5px;
+    //   }
+    //   &__vertical {
+    //     display: block;
+    //   }
+    //   &__before {
+    //     display: none;
+    //   }
+    //   &__after {
+    //     display: none;
+    //   }
+    // }
     .es-slider {
       margin-bottom: 32px;
       &__title {
@@ -875,14 +966,14 @@ body {
         padding-top: 32px;
         display: block;
       }
-      &__packshot{
-        img{
+      &__packshot {
+        img {
           height: 500px;
           min-width: 200px;
         }
       }
       &__img {
-        &--bg{
+        &--bg {
           width: 200px;
         }
         &--line-1 {
@@ -905,9 +996,8 @@ body {
         margin: 0;
       }
       &__title {
-       text-align: center;
+        text-align: center;
         padding-top: 40px;
-
       }
       &__content {
         display: flex;
@@ -932,35 +1022,34 @@ body {
         width: 40px;
       }
     }
-    .es-routine{
+    .es-routine {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       padding: 32px;
-      &__img{
+      &__img {
         display: flex;
-        &--model{
+        &--model {
           height: 100%;
           width: 100%;
         }
-        &--packshots{
+        &--packshots {
           margin-left: -150px;
           margin-bottom: -50px;
         }
       }
-      &__content{
+      &__content {
         min-width: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
       }
-      &__title{
-       font-size: 28px;
-       text-transform: uppercase;
-       text-align: start; 
-     }
+      &__title {
+        font-size: 28px;
+        text-transform: uppercase;
+        text-align: start;
+      }
     }
-
   }
 }
 
