--- a/style.scss
+++ b/style.scss
@@ -81,7 +81,7 @@ body {
       align-items: center;
     }
     &__brand-name {
-      max-width: 300px;
+      max-width: 280px;
       margin-bottom: 20px;
     }
     &__fancy {
@@ -109,7 +109,7 @@ body {
     }
     &__title-1,
     &__title-2 {
-      width: 100px;
+      width: 90px;
     }
     &__text {
       @include text;
@@ -123,7 +123,7 @@ body {
       animation-delay: 0.6s;
       bottom: 0;
       right: 0;
-      padding: 0 16px;
+      padding: 0 8px;
       img {
         max-width: 240px;
         height: 230px;
@@ -173,7 +173,7 @@ body {
       margin-bottom: 32px;
       font-weight: 300;
       text-transform: uppercase;
-      font-size: 32px;
+      font-size: 29px;
       text-align: center;
       letter-spacing: -1px;
       line-height: 1.1;
@@ -194,7 +194,6 @@ body {
       gap: 48px 0;
     }
     &__single {
-      // width: 280px;
       &:hover {
         .es-benefits__img--bg {
           transform: scale(1.1);
@@ -355,7 +354,6 @@ body {
       text-align: center;
     }
     &__images {
-      // padding: 32px;
       display: flex;
       flex-wrap: wrap;
       width: 50%;
@@ -423,14 +421,16 @@ body {
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      align-items: flex-start;
     }
     &__title {
+      @include text;
+      font-size: 30px;
+      font-weight: 300;
+      margin-bottom: 32px;
       text-transform: uppercase;
-      text-align: center;
+      line-height: 1.1;
     }
     &__images {
-      // padding: 32px;
       display: flex;
       flex-wrap: wrap;
       width: 50%;
@@ -453,7 +453,9 @@ body {
       background-repeat: no-repeat;
       margin-bottom: 5px;
       position: relative;
+      font-weight: 700;
       color: #000;
+      text-transform: uppercase;
       p {
         margin: 0;
         font-size: 14px;
@@ -471,7 +473,9 @@ body {
       background-size: contain;
       background-repeat: no-repeat;
       position: relative;
+      font-weight: 700;
       color: #000;
+      text-transform: uppercase;
       p {
         margin: 0;
         font-size: 14px;
@@ -523,6 +527,10 @@ body {
     &__single {
       width: 180px;
     }
+    &__products-desktop {
+      display: none;
+    }
+
     &__packshot {
       margin-bottom: 32px;
     }
@@ -550,70 +558,8 @@ body {
       }
     }
   }
-  // .es-eyelashes {
-  //   &__title {
-  //     text-align: center;
-  //     font-weight: 400;
-  //     text-transform: uppercase;
-  //     font-size: 32px;
-  //   }
-  //   &__container {
-  //     display: flex;
-  //     flex-wrap: wrap;
-  //     justify-content: center;
-  //     align-items: center;
-  //     padding: 32px;
-  //   }
-  //   &__single {
-  //     display: flex;
-  //     flex-direction: column;
-  //     max-width: 200px;
-  //     margin-top: 15px;
-  //     margin-right: 0;
-  //     position: relative;
-  //   }
-  //   &__img {
-  //     width: 100%;
-  //     height: auto;
-  //     position: relative;
-  //   }
-  //   &__text {
-  //     text-align: center;
-  //     text-transform: uppercase;
-  //     font-weight: 600;
-  //   }
-  //   &__before {
-  //     display: flex;
-  //     position: absolute;
-  //     color: #fff;
-  //     font-weight: bolder;
-  //     top: 180px;
-  //     left: 10px;
-  //   }
-  //   &__after {
-  //     display: flex;
-  //     position: absolute;
-  //     color: #fff;
-  //     font-weight: bolder;
-  //     bottom: -5px;
-  //     left: 10px;
-  //   }
-  //   &__vertical-text {
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: space-between;
-  //     align-items: center;
-  //     height: 350px;
-  //   }
-  //   &__vertical {
-  //     text-transform: uppercase;
-  //     font-size: 24px;
-  //     transform: rotate(-90deg);
-  //     display: none;
-  //   }
-  // }
+
   .es-slider {
-    // margin-bottom: 64px;
     padding: 56px 16px 32px 16px;
     &__title {
       @include text;
@@ -675,7 +621,6 @@ body {
       font-weight: 700;
     }
     &__text {
-      // width: 600px;
       font-size: 13px;
     }
     &__link {
@@ -769,7 +714,6 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
     }
     &__title {
       font-size: 28px;
@@ -777,9 +721,59 @@ body {
       text-align: center;
     }
     &__disclaimer {
-      // display: inline-block;
+      font-size: 12px;
       text-align: center;
-      // margin: 0 auto;
+    }
+  }
+  @media screen and (min-width: 530px) {
+    .es-kv {
+      &__brand {
+        margin-left: 30px;
+        justify-content: flex-start;
+      }
+      &__title-1,
+      &__title-2 {
+        width: 150px;
+      }
+      &__packshot {
+        & img {
+          height: 350px;
+        }
+      }
+      &__fancy {
+        font-size: 14px;
+        max-width: none;
+      }
+    }
+    .es-results,
+    .es-results-2 {
+      flex-wrap: wrap;
+
+      &__images {
+        gap: 5px;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+      }
+      &__before {
+        margin-bottom: 0;
+      }
+    }
+
+    .es-benefits {
+      &__container {
+        gap: 10px;
+      }
+      &__single {
+        width: 160px;
+      }
+    }
+
+    .es-routine {
+      &__title,
+      &__text {
+        text-align: left;
+      }
     }
   }
 
@@ -802,8 +796,8 @@ body {
         position: absolute;
         z-index: 3;
         &--1 {
-          top: 217px;
-          right: 58%;
+          left: 20px;
+          bottom: 20px;
           min-width: 332px;
         }
         &--2 {
@@ -813,6 +807,13 @@ body {
         img {
           display: block;
         }
+      }
+      &__title-1,
+      &__title-2 {
+        width: auto;
+      }
+      &__fancy {
+        font-size: 18px;
       }
       &__packshot {
         img {
@@ -880,7 +881,6 @@ body {
       }
       &__tik {
         align-self: flex-end;
-        // position: absolute;
         padding: 0;
       }
       &__title {
@@ -906,34 +906,6 @@ body {
         }
       }
     }
-
-    .es-results {
-      display: flex;
-      flex-direction: row;
-      &__content {
-        width: 50%;
-      }
-      &__img {
-        width: 50%;
-      }
-      &__before {
-        margin: 5px;
-      }
-    }
-    // .es-eyelashes {
-    //   &__single {
-    //     margin-right: 5px;
-    //   }
-    //   &__vertical {
-    //     display: block;
-    //   }
-    //   &__before {
-    //     display: none;
-    //   }
-    //   &__after {
-    //     display: none;
-    //   }
-    // }
     .es-slider {
       margin-bottom: 32px;
       &__title {
@@ -950,11 +922,67 @@ body {
       &__link {
         margin: 0;
       }
+      &__text {
+        font-size: 14px;
+      }
+    }
+    .es-benefits {
+      &__single {
+        width: 220px;
+      }
+    }
+    .es-results-2 {
+      &__images {
+        width: 100%;
+      }
+      &__img {
+        width: 392px;
+        height: 394px;
+      }
+      &__before,
+      &__after {
+        & p {
+          right: 25px;
+          bottom: 25px;
+        }
+      }
+      &__text {
+        margin-left: 40px;
+      }
+    }
+    .es-look {
+      padding-bottom: 32px;
+      &__title br {
+        display: none;
+      }
+      &__packshot {
+        display: none;
+      }
+      &__products-desktop {
+        display: block;
+        margin: 0 auto;
+      }
     }
   }
 
   @media screen and (min-width: 930px) {
+    .es-kv {
+      &__banner {
+        min-height: 500px;
+      }
+      &__packshot {
+        & img {
+          width: auto;
+          margin-right: 45px;
+          height: 475px;
+        }
+      }
+    }
     .es-benefits {
+      &__container {
+        gap: 5px;
+      }
+
       &__banner {
         display: flex;
         flex-flow: row;
@@ -968,13 +996,16 @@ body {
       }
       &__packshot {
         img {
-          height: 500px;
+          height: 369px;
           min-width: 200px;
         }
       }
+      &__single {
+        width: 300px;
+      }
       &__img {
         &--bg {
-          width: 200px;
+          width: 100%;
         }
         &--line-1 {
           position: relative;
@@ -997,7 +1028,6 @@ body {
       }
       &__title {
         text-align: center;
-        padding-top: 40px;
       }
       &__content {
         display: flex;
@@ -1042,12 +1072,27 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
       }
       &__title {
+        max-width: 350px;
         font-size: 28px;
         text-transform: uppercase;
         text-align: start;
+
+        & br {
+          display: none;
+        }
+      }
+    }
+    .es-results {
+      display: flex;
+      flex-direction: row;
+      &__content {
+        width: 45%;
+      }
+      &__img {
+        width: 50%;
       }
     }
   }
