fix: images path in css files

--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,7 @@ body {
     }
     &__banner {
       position: relative;
-      background: url('images/bg-kv.png') no-repeat center;
+      background: url(./images/bg-kv.png) no-repeat center;
       background-size: cover;
       min-height: 426px;
       padding-top: 20px;
@@ -310,7 +310,7 @@ body {
       position: relative;
       &::after {
         display: none;
-        content: url(images/line-7.png);
+        content: url(./images/line-7.png);
         position: absolute;
         top: 175px;
         right: -60px;
@@ -326,7 +326,7 @@ body {
       position: relative;
       &::before {
         display: none;
-        content: url(images/line-7.png);
+        content: url(./images/line-7.png);
         position: absolute;
         left: -200px;
       }
@@ -370,7 +370,7 @@ body {
     &__before {
       width: 100%;
       height: 100%;
-      background-image: url(/images/before.png);
+      background-image: url(./images/before.png);
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -389,7 +389,7 @@ body {
     &__after {
       width: 100%;
       height: 100%;
-      background-image: url(/images/after.png);
+      background-image: url(./images/after.png);
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -447,7 +447,7 @@ body {
     &__before {
       width: 100%;
       height: 100%;
-      background-image: url(/images/before-2.png);
+      background-image: url(./images/before-2.png);
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -468,7 +468,7 @@ body {
     &__after {
       width: 100%;
       height: 100%;
-      background-image: url(/images/after-2.png);
+      background-image: url(./images/after-2.png);
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -576,7 +576,7 @@ body {
       padding-bottom: 42px;
     }
     &__wrapper {
-      background: url('images/slider.png') no-repeat top left;
+      background: url(./images/slider.png) no-repeat top left;
       padding: 56px 16px 0 16px;
     }
     &__content {
