--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #es-loreal.es-loreal {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
@@ -24,7 +24,7 @@ body {
 #es-loreal.es-loreal h3,
 #es-loreal.es-loreal h4,
 #es-loreal.es-loreal h5 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #1d1d1b;
 }
 #es-loreal.es-loreal .es-kv {
@@ -41,12 +41,11 @@ body {
   margin: 24px 0;
   margin-top: 0;
   opacity: 0;
-  -webkit-animation: slidedown 0.6s ease forwards;
   animation: slidedown 0.6s ease forwards;
 }
 #es-loreal.es-loreal .es-kv__banner {
   position: relative;
-  background: url('images/bg-kv.png') no-repeat center;
+  background: url(./images/bg-kv.png) no-repeat center;
   background-size: cover;
   min-height: 426px;
   padding-top: 20px;
@@ -95,8 +94,7 @@ body {
   display: flex;
   gap: 10px;
 }
-#es-loreal.es-loreal .es-kv__title-1,
-#es-loreal.es-loreal .es-kv__title-2 {
+#es-loreal.es-loreal .es-kv__title-1, #es-loreal.es-loreal .es-kv__title-2 {
   width: 90px;
 }
 #es-loreal.es-loreal .es-kv__text {
@@ -112,9 +110,7 @@ body {
 #es-loreal.es-loreal .es-kv__packshot {
   position: absolute;
   opacity: 0;
-  -webkit-animation: appear 0.6s ease forwards;
   animation: appear 0.6s ease forwards;
-  -webkit-animation-delay: 0.6s;
   animation-delay: 0.6s;
   bottom: 0;
   right: 0;
@@ -149,9 +145,7 @@ body {
 #es-loreal.es-loreal .es-kv__content--1 {
   position: absolute;
   bottom: 0;
-  -webkit-animation: slideright 0.6s ease forwards;
   animation: slideright 0.6s ease forwards;
-  -webkit-animation-delay: 0.6s;
   animation-delay: 0.6s;
 }
 #es-loreal.es-loreal .es-kv__disc {
@@ -345,7 +339,7 @@ body {
 }
 #es-loreal.es-loreal .es-you__image::after {
   display: none;
-  content: url(images/line-7.png);
+  content: url(./images/line-7.png);
   position: absolute;
   top: 175px;
   right: -60px;
@@ -363,7 +357,7 @@ body {
 }
 #es-loreal.es-loreal .es-you__asset::before {
   display: none;
-  content: url(images/line-7.png);
+  content: url(./images/line-7.png);
   position: absolute;
   left: -200px;
 }
@@ -405,7 +399,7 @@ body {
 #es-loreal.es-loreal .es-results__before {
   width: 100%;
   height: 100%;
-  background-image: url(/images/before.png);
+  background-image: url(./images/before.png);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -424,7 +418,7 @@ body {
 #es-loreal.es-loreal .es-results__after {
   width: 100%;
   height: 100%;
-  background-image: url(/images/after.png);
+  background-image: url(./images/after.png);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -487,7 +481,7 @@ body {
 #es-loreal.es-loreal .es-results-2__before {
   width: 100%;
   height: 100%;
-  background-image: url(/images/before-2.png);
+  background-image: url(./images/before-2.png);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -508,7 +502,7 @@ body {
 #es-loreal.es-loreal .es-results-2__after {
   width: 100%;
   height: 100%;
-  background-image: url(/images/after-2.png);
+  background-image: url(./images/after-2.png);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -636,7 +630,7 @@ body {
   padding-bottom: 42px;
 }
 #es-loreal.es-loreal .es-slider__wrapper {
-  background: url('images/slider.png') no-repeat top left;
+  background: url(./images/slider.png) no-repeat top left;
   padding: 56px 16px 0 16px;
 }
 #es-loreal.es-loreal .es-slider__content {
@@ -728,17 +722,11 @@ body {
   position: relative;
 }
 #es-loreal.es-loreal .es-slider .swiper-button-prev:after,
-#es-loreal.es-loreal
-  .es-slider
-  .swiper-container-rtl
-  .swiper-button-next:after {
+#es-loreal.es-loreal .es-slider .swiper-container-rtl .swiper-button-next:after {
   display: none;
 }
 #es-loreal.es-loreal .es-slider .swiper-button-next:after,
-#es-loreal.es-loreal
-  .es-slider
-  .swiper-container-rtl
-  .swiper-button-prev:after {
+#es-loreal.es-loreal .es-slider .swiper-container-rtl .swiper-button-prev:after {
   display: none;
 }
 #es-loreal.es-loreal .es-slider .swiper-button-next,
@@ -751,10 +739,7 @@ body {
   left: -12px;
   right: auto;
 }
-#es-loreal.es-loreal
-  .es-slider
-  .swiper-container-horizontal
-  > .swiper-pagination-bullets,
+#es-loreal.es-loreal .es-slider .swiper-container-horizontal > .swiper-pagination-bullets,
 #es-loreal.es-loreal .es-slider .swiper-pagination-custom,
 #es-loreal.es-loreal .es-slider .swiper-pagination-fraction {
   bottom: 0px;
@@ -822,8 +807,7 @@ body {
     margin-left: 30px;
     justify-content: flex-start;
   }
-  #es-loreal.es-loreal .es-kv__title-1,
-  #es-loreal.es-loreal .es-kv__title-2 {
+  #es-loreal.es-loreal .es-kv__title-1, #es-loreal.es-loreal .es-kv__title-2 {
     width: 150px;
   }
   #es-loreal.es-loreal .es-kv__packshot img {
@@ -854,8 +838,7 @@ body {
   #es-loreal.es-loreal .es-benefits__single {
     width: 160px;
   }
-  #es-loreal.es-loreal .es-routine__title,
-  #es-loreal.es-loreal .es-routine__text {
+  #es-loreal.es-loreal .es-routine__title, #es-loreal.es-loreal .es-routine__text {
     text-align: left;
   }
 }
@@ -889,8 +872,7 @@ body {
   #es-loreal.es-loreal .es-kv__content img {
     display: block;
   }
-  #es-loreal.es-loreal .es-kv__title-1,
-  #es-loreal.es-loreal .es-kv__title-2 {
+  #es-loreal.es-loreal .es-kv__title-1, #es-loreal.es-loreal .es-kv__title-2 {
     width: auto;
   }
   #es-loreal.es-loreal .es-kv__fancy {
@@ -916,7 +898,6 @@ body {
     position: absolute;
     left: -85px;
     width: -moz-fit-content;
-    width: -webkit-fit-content;
     width: fit-content;
   }
   #es-loreal.es-loreal .es-kv__line-2 img {
@@ -927,7 +908,6 @@ body {
     left: -50px;
     top: 215px;
     width: -moz-fit-content;
-    width: -webkit-fit-content;
     width: fit-content;
   }
   #es-loreal.es-loreal .es-kv__badge {
@@ -937,8 +917,7 @@ body {
     align-content: space-around;
     position: relative;
   }
-  #es-loreal.es-loreal .es-kv__text,
-  #es-loreal.es-loreal .es-kv__title {
+  #es-loreal.es-loreal .es-kv__text, #es-loreal.es-loreal .es-kv__title {
     text-align: left;
   }
   #es-loreal.es-loreal .es-kv__text {
@@ -1014,8 +993,7 @@ body {
     width: 392px;
     height: 394px;
   }
-  #es-loreal.es-loreal .es-results-2__before p,
-  #es-loreal.es-loreal .es-results-2__after p {
+  #es-loreal.es-loreal .es-results-2__before p, #es-loreal.es-loreal .es-results-2__after p {
     right: 25px;
     bottom: 25px;
   }
@@ -1152,29 +1130,9 @@ body {
   }
 }
 
-@-webkit-keyframes appear {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 @keyframes appear {
   from {
     opacity: 0;
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@-webkit-keyframes slidedown {
-  from {
-    opacity: 0;
-    transform: translateY(-32px);
   }
   to {
     opacity: 1;
@@ -1191,30 +1149,10 @@ body {
     transform: translateY(0);
   }
 }
-@-webkit-keyframes slideright {
-  from {
-    opacity: 0.3;
-    transform: translateX(-100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
 @keyframes slideright {
   from {
     opacity: 0.3;
     transform: translateX(-100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes slideleft {
-  from {
-    opacity: 0.3;
-    transform: translateX(100px);
   }
   to {
     opacity: 1;
@@ -1230,4 +1168,4 @@ body {
     opacity: 1;
     transform: translateX(0);
   }
-}
+}/*# sourceMappingURL=style.css.map */
